# auto-docstring

./: .flake8  Makefile  pyproject.toml  test-bad.py  test-good.py  test.py
auto_docstring/: __init__.py  __main__.py  cli.py  docstring_errors.py  test.py  unused.py
auto_docstring/tests/: test_auto_docstring.py  test_identifies_errors.py  utils.py
auto_docstring/tests/test_cases/: no_args_section.py  no_returns_section.py  no_summary.py
tests/: test_auto_docstring.py
