[tool.poetry]
name = "auto-docstring"
description = ""
version = "0.0.0"
authors = ["Hannes <h@nnes.dev>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
# Formatting
ssort = "^0.11"
isort = "^5.10"
black = "^22.6"
# Linting
flake8 = "^4.0"
# Type checking
pyright = "^1.1"

# Unit testing
pytest = "^7.1"
pytest-cov = "^3.0"

[tool.pyright]
reportMissingTypeStubs = false
reportUntypedFunctionDecorator = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
